@@ -1,53 +1,62 @@
 package com.nameless.storage_server.service.normalize.steps;
 
-import com.nameless.storage_server.service.normalize.splitter.TokenSplitter;
-import com.nameless.storage_server.service.normlizeToken.NormalizeTokenService;
 import edu.stanford.nlp.pipeline.*;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
+import jakarta.annotation.PostConstruct;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.core.annotation.Order;
+import org.springframework.stereotype.Component;
 
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
 import java.util.Properties;
 
-@Service
+@Component
+@Order(1)
 public class LemmatizationStep implements NormalizationStep {
 
-    private final StanfordCoreNLP lemmatizer;
-    private final StemmingStep stemmingStep;
+    private static final Logger logger = LoggerFactory.getLogger(LemmatizationStep.class);
+    private final StanfordCoreNLP pipeline;
 
-    public LemmatizationStep(@Value("${nlp.model.path}") String modelPath,
-                             StemmingStep stemmingStep) {
-        Properties props = new Properties();
-        props.setProperty("annotators", "tokenize,ssplit,pos,lemma");
-        props.setProperty("pos.model", Paths.get(modelPath).toAbsolutePath().toString());
 
-        lemmatizer = new StanfordCoreNLP(props);
-        this.stemmingStep = stemmingStep;
+    public LemmatizationStep() {
+        try {
+            logger.info("Initializing LemmatizationStep...");
+
+            // Load model file from resources
+            InputStream modelStream = getClass().getResourceAsStream("/models/english-left3words-distsim.tagger");
+            if (modelStream == null) {
+                throw new IllegalStateException("POS model file not found in resources/models/");
+            }
+
+            // Create temp file to pass absolute path
+            File tempFile = File.createTempFile("pos-model-", ".tagger");
+            Files.copy(modelStream, tempFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+            tempFile.deleteOnExit();
+
+            logger.info("POS model loaded at: {}", tempFile.getAbsolutePath());
+
+            // Configure pipeline
+            Properties props = new Properties();
+            props.setProperty("annotators", "tokenize,ssplit,pos,lemma");
+            props.setProperty("pos.model", tempFile.getAbsolutePath());
+
+            this.pipeline = new StanfordCoreNLP(props);
+            logger.info("Lemmatizer pipeline initialized successfully.");
+
+        } catch (Exception e) {
+            logger.error("Failed to initialize Lemmatizer", e);
+            throw new RuntimeException("Failed to initialize Lemmatizer", e);
+        }
     }
 
     @Override
-    public List<String> normalize(List <String> words, boolean both) {
-        // Step 1: Lemmatize each word
-        List<String> lemmatizedWords = new ArrayList<>();
-        for (String word : words) {
-            lemmatizedWords.add(lemmatizeWord(word));
-        }
-
-        if (both) {
-            return  stemmingStep.stemWords(lemmatizedWords) ;
-        } else {
-            return  lemmatizedWords;
-        }
-    }
-
-    // Helper method to lemmatize a single word using Stanford CoreNLP
-    private String lemmatizeWord(String word) {
+    public String normalize(String word) {
         CoreDocument doc = new CoreDocument(word);
-        lemmatizer.annotate(doc);
-
-        // Return the lemma of the first token (or the word itself if no lemma is found)
-        return doc.tokens().isEmpty() ? word : doc.tokens().get(0).lemma();
+        pipeline.annotate(doc);
+        return doc.tokens().isEmpty() ? word : doc.tokens().getFirst().lemma();
     }
 }
